--- a/less/global.less
+++ b/less/global.less
@@ -17,6 +17,10 @@ h1, h2, h3, h4, h5 {
   color: @header-font-color;
 }
 
+h1 {
+  font-size: 4rem;
+}
+
 h2 {
   font-size: 3.2rem;
 }
@@ -33,6 +37,13 @@ p {
 .container {
   max-width: 800px;
   width: 100%;
-  margin: 0 auto;  
+  margin: 0 auto;
 }
 
+  .top-bar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+    background-color: @wild-sand;
+}
