--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,13 @@
-// Navigation code here
+nav {
+  display: flex;
+  width: 21.5%;
+  justify-content: space-around;
+
+
+  a {
+    text-decoration: none;
+    color: @river-bend;
+    font-size: 1.6rem;
+    font-weight: bolder;
+  }
+}
