--- a/less/global.less
+++ b/less/global.less
@@ -40,10 +40,9 @@ p {
   margin: 0 auto;
 }
 
-  .top-bar {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 10px;
-    background-color: @wild-sand;
+.top-bar {
+  .colflex();
+  align-items: center;
+  padding: 10px;
+  background-color: @wild-sand;
 }
