--- a/less/home-page.less
+++ b/less/home-page.less
@@ -8,6 +8,10 @@
 
   .intro {
 
+    img {
+      width: 100%;
+    }
+
     h2 {
       padding: 15px;
     }
@@ -62,6 +66,7 @@
       }
 
       .btn {
+        .btns(white,#22283A,30%);
       }
     }
 
