--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,31 @@
 // Mixins Here
+.colflex {
+  display: flex;
+  flex-direction: column;
+}
+
+.rowflex {
+  display: flex;
+  flex-direction: row;
+}
+
+.btns(@fontcol, @bgcol, @width){
+
+  button {
+  background-color: @bgcol;
+  color: @fontcol;
+  width: @width;
+  border-style: solid;
+  border-radius: 7px;
+  font-size: 1.8rem;
+  padding: 7px 0;
+  text-align: center;
+  font-weight: 600;
+  font-family: 'Ubuntu', sans-serif;
+}
+
+  :hover {
+    background-color: @fontcol;
+    color: @bgcol;
+  }
+}
