--- a/css/index.css
+++ b/css/index.css
@@ -2,9 +2,17 @@
   display: flex;
   flex-direction: column;
 }
+.rcolflex {
+  display: flex;
+  flex-direction: column-reverse;
+}
 .rowflex {
   display: flex;
   flex-direction: row;
+}
+.rrowflex {
+  display: flex;
+  flex-direction: row-reverse;
 }
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
@@ -176,7 +184,16 @@ p {
   flex-direction: column;
   align-items: center;
   padding: 10px;
-  background-color: #F6F6F6;
+  background-color: rgba(246, 246, 246, 0.85);
+  position: sticky;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+@media (max-width: 500px) {
+  .top-bar {
+    width: 500px;
+  }
 }
 nav {
   display: flex;
@@ -200,11 +217,21 @@ footer {
   justify-content: center;
   align-items: center;
 }
+@media (max-width: 500px) {
+  .home {
+    width: 500px;
+  }
+}
 .home h1 {
   padding-bottom: 20px;
 }
 .home .intro img {
   width: 100%;
+}
+@media (max-width: 500px) {
+  .home .intro img {
+    border-radius: 5px;
+  }
 }
 .home .intro h2 {
   padding: 15px;
@@ -223,6 +250,18 @@ footer {
   border-radius: 20px;
   height: 100%;
 }
+@media (max-width: 500px) {
+  .home .space-images img {
+    width: 100%;
+    margin: 20px 5%;
+  }
+}
+@media (max-width: 500px) {
+  .home .space-images .sky,
+  .home .space-images .launch {
+    display: none;
+  }
+}
 .home .visit-planets {
   padding: 15px;
 }
@@ -239,11 +278,31 @@ footer {
   display: flex;
   justify-content: center;
 }
+@media (max-width: 500px) {
+  .home .walk {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column-reverse;
+    padding: 20px 0px;
+  }
+}
 .home .walk .walk-text {
   width: 50%;
 }
+@media (max-width: 500px) {
+  .home .walk .walk-text {
+    width: 95%;
+    margin-left: 4%;
+    margin-right: 4%;
+  }
+}
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text h3 {
+    margin-top: 20px;
+  }
 }
 .home .walk .walk-text p {
   margin-bottom: 26px;
@@ -264,9 +323,26 @@ footer {
   background-color: white;
   color: #22283A;
 }
+@media (max-width: 500px) {
+  .home .walk .walk-text .btn {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+  .home .walk .walk-text .btn button {
+    width: 100%;
+    margin-right: 3%;
+    padding: 24px;
+  }
+}
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-img {
+    width: 92%;
+  }
 }
 .home .walk .walk-img img {
   width: 100%;
