--- a/less/home-page.less
+++ b/less/home-page.less
@@ -2,6 +2,10 @@
 
 .home {
 
+  @media @phone {
+    width: 500px;
+  }
+
   h1 {
     padding-bottom: 20px;
   }
@@ -10,6 +14,10 @@
 
     img {
       width: 100%;
+
+      @media @phone {
+        border-radius: 5px;
+      }
     }
 
     h2 {
@@ -32,6 +40,16 @@
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
+
+      @media @phone {
+        width: 100%;
+        margin: 20px 5%;
+      }
+    }
+    .sky, .launch {
+      @media @phone {
+      display: none;
+      }
     }
   }
 
@@ -44,7 +62,7 @@
 
     p {
       margin-top: 13px;
-    }
+      }
   }
 
   .walk {
@@ -54,11 +72,27 @@
     display: flex;
     justify-content: center;
 
+    @media @phone {
+      margin-top: 20px;
+      .rcolflex();
+      padding: 20px 0px;
+    }
+
     .walk-text {
       width: 50%;
 
+      @media @phone {
+        width: 95%;
+        margin-left: 4%;
+        margin-right: 4%;
+      }
+
       h3 {
         margin-bottom: 10px;
+
+        @media @phone {
+          margin-top: 20px;
+        }
       }
 
       p {
@@ -73,6 +107,10 @@
     .walk-img {
       width: 46%;
       margin-left: 4%;
+
+      @media @phone {
+        width: 92%;
+      }
 
       img {
         width: 100%;
